Add OCR expiry date scanning from images/photos
Integrated Plugin.Maui.OCR for expiry date recognition via camera or gallery images. Added OcrDateService for date extraction from recognized text. Updated UI to allow scanning dates, and added quantity adjustment buttons for expiry records. Updated permissions for camera and photo access. Added usage guide and updated project dependencies.

--- a/Platforms/iOS/Info.plist
+++ b/Platforms/iOS/Info.plist
@@ -29,6 +29,10 @@
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Ta aplikacja wymaga dostępu do kamery aby skanować kody kreskowe produktów.</string>
+	<string>Ta aplikacja wymaga dostępu do kamery aby skanować kody kreskowe produktów i daty przydatności.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>Ta aplikacja wymaga dostępu do galerii zdjęć aby odczytać daty przydatności z obrazów.</string>
+	<key>NSPhotoLibraryAddUsageDescription</key>
+	<string>Ta aplikacja wymaga dostępu do zapisywania zdjęć w galerii.</string>
 </dict>
 </plist>
