Refactor pages structure
MainPage and ProductDetailsPage have been moved to a dedicated Pages folder/namespace for improved organization. All XAML and code-behind files are updated to reflect the new namespace, with no changes to UI or business logic. AppShell and the project file are updated to reference the new locations.

--- a/PrepersSupplies.csproj
+++ b/PrepersSupplies.csproj
@@ -64,7 +64,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <MauiXaml Update="ProductDetailsPage.xaml">
+	  <MauiXaml Update="Pages\ProductDetailsPage.xaml">
 	    <Generator>MSBuild:Compile</Generator>
 	  </MauiXaml>
 	</ItemGroup>
